--- a/.gitignore
+++ b/.gitignore
@@ -98,8 +98,8 @@ ENV/
 
 whoosh_index/
 # 第一次上传的时候要禁用下面的忽略设置，然后自行删除文件，之后再打开
-#migrations/
-#!migrations/__init__.py
+migrations/
+!migrations/__init__.py
 #media/
 
 
