--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,8 @@ python3-openid==3.1.0
 pytz==2017.2
 requests==2.18.4
 requests-oauthlib==0.8.0
-six==1.10.0
+six==1.11.0
 urllib3==1.22
+user-agent==0.1.9
 webencodings==0.5.1
 Whoosh==2.7.4
