--- a/.gitignore
+++ b/.gitignore
@@ -97,10 +97,12 @@ ENV/
 
 # 忽略网站个人信息，这些信息需要单独设置，不共享
 base_settings.py
+my_settings.py
+db.sqlite3
 whoosh_index/
 # 第一次上传的时候要禁用下面的忽略设置，然后自行删除文件，之后再打开
 migrations/
 !migrations/__init__.py
 media/
-db.sqlite3
+
 
