--- a/.gitignore
+++ b/.gitignore
@@ -101,9 +101,9 @@ whoosh_index/
 db.sqlite3
 *.env
 # 第一次上传的时候要禁用下面的忽略设置，然后自行删除文件，之后再打开
-#migrations/
-#!migrations/__init__.py
-#media/
-#!media/avatar/default.png
+migrations/
+!migrations/__init__.py
+media/
+!media/avatar/default.png
 
 
