--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,36 @@
-bleach==2.1.1
-bootstrap-admin==0.3.7.1
-certifi==2017.7.27.1
+bleach==3.1.0
+bootstrap-admin==0.4.3
+certifi==2019.9.11
 chardet==3.0.4
-defusedxml==0.5.0
-Django==1.11.12
-django-allauth==0.33.0
-django-appconf==1.0.2
-django-crispy-forms==1.6.1
-django-haystack==2.7.0
-django-imagekit==4.0.1
-django-redis==4.9.0
-djangorestframework==3.8.2
-emoji==0.4.5
-gunicorn==19.7.1
-html5lib==1.0b10
-idna==2.6
+defusedxml==0.6.0
+Django==2.1.4
+django-allauth==0.40.0
+django-appconf==1.0.3
+django-crispy-forms==1.7.2
+django-haystack==2.8.1
+django-imagekit==4.0.2
+django-redis==4.10.0
+djangorestframework==3.10.3
+emoji==0.5.4
+gunicorn==19.9.0
+html5lib==1.0.1
+idna==2.8
 jieba==0.39
-Markdown==2.6.8
-oauthlib==2.0.3
-olefile==0.44
+Markdown==3.1.1
+oauthlib==3.1.0
+olefile==0.46
 pilkit==2.0
-Pillow==4.2.1
-Pygments==2.2.0
-PyMySQL==0.7.11
+Pillow==6.1.0
+Pygments==2.4.2
+PyMySQL==0.9.3
 python3-openid==3.1.0
-pytz==2017.2
-redis==2.10.6
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
-urllib3==1.22
+pytz==2019.2
+redis==3.3.8
+requests==2.22.0
+requests-oauthlib==1.2.0
+six==1.12.0
+sqlparse==0.3.0
+urllib3==1.25.3
 user-agent==0.1.9
 webencodings==0.5.1
 Whoosh==2.7.4
