--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ bootstrap-admin==0.4.3
 certifi==2019.9.11
 chardet==3.0.4
 defusedxml==0.6.0
-Django==2.1.4
+Django==2.2.6
 django-allauth==0.40.0
 django-appconf==1.0.3
 django-crispy-forms==1.7.2
@@ -17,6 +17,7 @@ html5lib==1.0.1
 idna==2.8
 jieba==0.39
 Markdown==3.1.1
+mysqlclient==1.4.4
 oauthlib==3.1.0
 olefile==0.46
 pilkit==2.0
