--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Django==2.2.20
 django-allauth==0.40.0
 django-appconf==1.0.3
 django-crispy-forms==1.7.2
-django-haystack==2.8.1
+django-haystack
 django-imagekit==4.0.2
 django-redis==4.10.0
 djangorestframework==3.10.3
@@ -16,11 +16,11 @@ html5lib==1.0.1
 idna==2.8
 jieba==0.39
 Markdown==3.1.1
-mysqlclient==1.4.4
+mysqlclient
 oauthlib==3.1.0
 olefile==0.46
 pilkit==2.0
-Pillow==6.2.0
+Pillow
 Pygments==2.4.2
 PyMySQL==0.9.3
 python3-openid==3.1.0
@@ -35,3 +35,4 @@ user-agent==0.1.9
 webencodings==0.5.1
 Whoosh==2.7.4
 django-tctip>=1.4.0
+django-mdeditor
