添加github同步到gitee

--- a/.github/workflows/sync_to_gitee.yml
+++ b/.github/workflows/sync_to_gitee.yml
@@ -21,3 +21,4 @@ jobs:
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
           force_update: true
+          static_list: "izone"
