依赖版本修改

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,28 +10,33 @@ django-crispy-forms==1.7.2
 django-haystack==2.8.1
 django-imagekit==4.0.2
 django-redis==4.10.0
+django-tctip==1.4.4
 djangorestframework==3.11.2
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
+importlib-metadata==6.6.0
 jieba==0.39
 Markdown==3.4.3
-mysqlclient==1.4.4
+mysqlclient==2.0.3
 oauthlib==3.1.0
 olefile==0.46
+packaging==21.3
 pilkit==2.0
-Pygments==2.15.1
 Pillow==9.3.0
-PyMySQL==0.9.3
+Pygments==2.15.1
+PyMySQL==1.0.2
+pyparsing==3.0.7
 python3-openid==3.1.0
 pytz==2019.2
 redis==3.3.8
 requests==2.22.0
 requests-oauthlib==1.2.0
+setuptools-scm==6.0.1
 six==1.12.0
 sqlparse==0.3.0
 urllib3==1.25.3
 user-agent==0.1.9
 webencodings==0.5.1
 Whoosh==2.7.4
-django-tctip>=1.4.4
+zipp==3.15.0
