修改部署方式为supervisord管理进程

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
+amqp==2.6.1
+billiard==3.6.4.0
 bleach==3.3.0
 bootstrap-admin==0.4.3
+celery==4.4.2
 certifi==2022.12.7
 chardet==3.0.4
 defusedxml==0.6.0
 Django==2.2.28
 django-allauth==0.42.0
 django-appconf==1.0.3
+django-celery-beat==2.2.0
+django-celery-results==2.0.1
 django-crispy-forms==1.7.2
 django-haystack==2.8.1
 django-imagekit==4.0.2
 django-redis==4.10.0
 django-tctip==1.4.4
+django-timezone-field==4.2.3
 djangorestframework==3.11.2
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
 importlib-metadata==6.6.0
 jieba==0.39
+kombu==4.6.11
 Markdown==3.4.3
 mysqlclient==2.0.3
 oauthlib==3.1.0
@@ -27,6 +34,8 @@ Pillow==9.3.0
 Pygments==2.15.1
 PyMySQL==1.0.2
 pyparsing==3.0.7
+python-crontab==2.7.1
+python-dateutil==2.8.2
 python3-openid==3.1.0
 pytz==2019.2
 redis==3.3.8
@@ -35,8 +44,10 @@ requests-oauthlib==1.2.0
 setuptools-scm==6.0.1
 six==1.12.0
 sqlparse==0.3.0
+supervisor==4.2.5
 urllib3==1.25.3
 user-agent==0.1.9
+vine==1.3.0
 webencodings==0.5.1
 Whoosh==2.7.4
 zipp==3.15.0
