添加easytask应用，用来添加celery定时任务

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -12,4 +12,4 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
 [include]
-files = /opt/cloud/izone/supervisord.d/*django.conf
+files = /opt/cloud/izone/supervisord.d/*.conf
