--- a/supervisord.d/supervisor_celery_beat.conf
+++ b/supervisord.d/supervisor_celery_beat.conf
@@ -1,10 +1,10 @@
 [program:celery-beat]
-command=/Users/leizhu/.pyenv/versions/3.9.2/bin/celery -A dj_celery_demo beat -l info
-directory=/Users/leizhu/Documents/Private/dj_celery_demo
-stdout_logfile=celery.beat.log
-stderr_logfile=celery.beat.log
+command=celery -A izone beat -l info
+directory=/opt/cloud/izone
+stdout_logfile=/var/log/supervisor/celery.beat.log
+stderr_logfile=/var/log/supervisor/celery.beat.log
 autostart=true
 autorestart=true
-startsecs=10
-stopwaitsecs=60
-priority=300
+startsecs=2
+stopwaitsecs=2
+priority=101
