--- a/supervisord.conf
+++ b/supervisord.conf
@@ -11,5 +11,36 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 
-[include]
-files = /opt/cloud/izone/supervisord.d/*.conf
+; 管理的进程配置
+[program:gunicorn-django]
+command=gunicorn izone.wsgi -b 0.0.0.0:8000
+directory=/opt/cloud/izone
+stdout_logfile=/var/log/supervisor/gunicorn.django.log
+stderr_logfile=/var/log/supervisor/gunicorn.django.log
+autostart=true
+autorestart=true
+startsecs=2
+stopwaitsecs=2
+priority=100
+
+[program:celery-worker]
+command=celery -A izone worker -l info
+directory=/opt/cloud/izone
+stdout_logfile=/var/log/supervisor/celery.worker.log
+stderr_logfile=/var/log/supervisor/celery.worker.log
+autostart=true
+autorestart=true
+startsecs=3
+stopwaitsecs=3
+priority=102
+
+[program:celery-beat]
+command=celery -A izone beat -l info
+directory=/opt/cloud/izone
+stdout_logfile=/var/log/supervisor/celery.beat.log
+stderr_logfile=/var/log/supervisor/celery.beat.log
+autostart=true
+autorestart=true
+startsecs=2
+stopwaitsecs=2
+priority=101
