--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,8 @@ whoosh_index/
 *.env
 # 第一次上传的时候要禁用下面的忽略设置，然后自行删除文件，之后再打开
 media/
-!media/avatar/default.png
+!media/avatar/default*.png
+!media/friend/default*.png
 
 # jieba
 .DS_Store
