--- a/.gitignore
+++ b/.gitignore
@@ -99,10 +99,8 @@ ENV/
 .idea
 whoosh_index/
 *.env
-# 第一次上传的时候要禁用下面的忽略设置，然后自行删除文件，之后再打开
-media/
-!media/avatar/default*.png
-!media/friend/default*.png
+# 禁用上传目录
+upload/
 
 # jieba
 .DS_Store
