添加日志配置，统一日志路径

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,5 +1,5 @@
 [supervisord]
-logfile=/var/log/supervisor/supervisord.log ; main log file; default $CWD/supervisord.log
+logfile=log/supervisord.log ; main log file; default $CWD/supervisord.log
 pidfile=/tmp/supervisord.pid ; supervisord pidfile; default supervisord.pid
 
 [unix_http_server]
@@ -14,8 +14,8 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 [program:gunicorn-django]
 command=gunicorn izone.wsgi -b 0.0.0.0:8000
 directory=/opt/cloud/izone
-stdout_logfile=/var/log/supervisor/gunicorn.django.log
-stderr_logfile=/var/log/supervisor/gunicorn.django.log
+stdout_logfile=log/gunicorn.django.log
+stderr_logfile=log/gunicorn.django.log
 autostart=true
 autorestart=true
 startsecs=2
@@ -25,8 +25,8 @@ priority=100
 [program:celery-worker]
 command=celery -A izone worker -l info
 directory=/opt/cloud/izone
-stdout_logfile=/var/log/supervisor/celery.worker.log
-stderr_logfile=/var/log/supervisor/celery.worker.log
+stdout_logfile=log/celery.worker.log
+stderr_logfile=log/celery.worker.log
 autostart=true
 autorestart=true
 startsecs=3
@@ -36,8 +36,8 @@ priority=102
 [program:celery-beat]
 command=celery -A izone beat -l info
 directory=/opt/cloud/izone
-stdout_logfile=/var/log/supervisor/celery.beat.log
-stderr_logfile=/var/log/supervisor/celery.beat.log
+stdout_logfile=log/celery.beat.log
+stderr_logfile=log/celery.beat.log
 autostart=true
 autorestart=true
 startsecs=2
