--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-haystack==2.8.1
 django-imagekit==4.0.2
 django-redis==4.10.0
 django-tctip==1.4.4
+django-webstack
 django-timezone-field==4.2.3
 djangorestframework==3.11.2
 gunicorn==19.9.0
