--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-redis==4.10.0
 django-tctip==1.4.4
 django-timezone-field==4.2.3
 djangorestframework==3.11.2
+django-webstack>=1.5.4
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
