--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ olefile==0.46
 packaging==21.3
 pilkit==2.0
 Pillow==9.3.0
+pycryptodome==3.20.0
 Pygments==2.15.1
 PyMySQL==1.0.2
 pyparsing==3.0.7
