--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ django-redis==4.10.0
 django-tctip==1.4.7
 django-timezone-field==4.2.3
 djangorestframework==3.11.2
-django-webstack>=1.5.4
+django-webstack==1.5.4
 gunicorn==19.9.0
 html5lib==1.0.1
 idna==2.8
@@ -60,3 +60,12 @@ zipp==3.15.0
 sgmllib3k==1.0.0
 feedparser==6.0.11
 qiniu==7.13.2
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==24.2.0
+frozenlist==1.4.1
+multidict==6.1.0
+typing_extensions==4.12.2
+yarl==1.11.1
