--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build -t izone-master:$(date +%s) .
+      run: docker build -f ./Dockerfile-slim -t izone-master:$(date +%s) .
