--- a/Dockerfile-slim
+++ b/Dockerfile-slim
@@ -23,6 +23,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 COPY requirements.txt requirements.txt
+RUN pip install --no-cache-dir setuptools==68.0.0 --index-url $pip_index_url --trusted-host $pip_trusted_host
 RUN pip install --no-cache-dir -r requirements.txt --index-url $pip_index_url --trusted-host $pip_trusted_host
 RUN mkdir -p log && chmod -R 755 log
 
